@@ -1,9 +1,0 @@
-package org.antlr.v4.codegen.model;
-
-import org.antlr.v4.codegen.OutputModelFactory;
-
-public class BlankListenerFile extends ListenerFile {
-	public BlankListenerFile(OutputModelFactory factory, String fileName) {
-		super(factory, fileName);
-	}
-}
